--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello, World!</h1>
     <img src="img_6506.jpg" width="600" alt="Flowers on a farm"/>
 </body>
 </html>
