Added width and height to image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello, World!</h1>
-    <img src="img_6506.jpg" width="600" alt="Flowers on a farm"/>
+    <img src="img_6506.jpg" width="600" height="450" alt="Flowers on a farm"/>
 </body>
 </html>
